Updated in response to co-author edits.

--- a/hydrograph_recession_comparison.ipynb
+++ b/hydrograph_recession_comparison.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFNaXmF1869nCAvUQyIwuV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +45,7 @@
         "\n",
         "---\n",
         "\n",
-        "Created for *Unsaturated zone water storage regulates recharge to groundwater and subsequent runoff response in seasonally dry California basins*."
+        "Created for *Patterns of Intra-Seasonal Groundwater Recharge Inferred from Streamflow and Explained by Vadose Zone Storage Deficits*."
       ],
       "metadata": {
         "id": "RqVqOMFERPk-"
@@ -63,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "CRedkh6dPsPb"
       },
@@ -94,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "powpdTXNFY9j",
         "colab": {
@@ -127,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "IyD5LS-0OQ5E"
       },
@@ -372,7 +371,7 @@
       "metadata": {
         "id": "KvleSm2KTPVz"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +495,7 @@
         "id": "no1piNHWTB6E",
         "outputId": "16d0a4d6-ac34-4cd9-ef9a-b78cd12e9f17"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
