Updated in response to co-author edits.

--- a/hydrograph_recession_comparison.ipynb
+++ b/hydrograph_recession_comparison.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Fitting the sensitivity function to hydrgraph recessions: comparing methods.**\n",
+        "#**Comparing method of fitting hydrograph recessions with the sensitivity function**\n",
         "---\n",
         "Estimating groundwater recharge with the sensitivity function requires fitting $g(Q)$ when recharge and transpiration from groundwater are sufficiently low compared to discharge (Kirchner 2009).  To avoid $E_{gw} \\gg Q$, we follow Dralle et al. (2018) in restricting the streamflow recessions used to fit $g(Q)$ from November-March.  Winter energy-limitation in California's seasonal Mediterranean climate causes discharge to greatly exceed the rate of evapotranspiration across the study sites.  However, we diverge from the common practice of excluding streamflow recessions during days with significant rainfall to ensure $P,R\\ll Q$ (Kirchner, 2009; Dralle et al., 2018; Wlostowski et al., 2023; Dralle et al., 2023).  For the extended streamflow timeseries fit in our analysis ($\\geq$10 years in each watershed), we reason the impact of small-event recharge on recession behavior will be averaged-out by recessions within the same range of $Q$ for which recharge did not occur.  This yields a more extensive timeseries for fitting the sensitivity function and allows us to capture the steepest streamflow recessions.  However, we still remove the first and last days of individual recessions to negate the greatest contributions from recharge at the limits of the recession duration.  Here, we show the difference in our method of extracting and fitting streamflow recessions to that described in Dralle et al. (2023) at the original Elder Creek catchment.\n",
         "\n",
