Updated in response to co-author edits.

--- a/recharge_ratio_resolution_comparison.ipynb
+++ b/recharge_ratio_resolution_comparison.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt6HDkROS+dBewROSNioKQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**How does changing the temporal reolution of the data (daily to hourly) impact the reponse of the event-scale recharge ratio to deficit?**\n",
+        "#**How does increasing the temporal resolution of the data (from daily to hourly) affect the observed deficit-recharge relationship?**\n",
         "\n",
         "---\n",
         "\n",
@@ -48,7 +47,7 @@
         "comparison (only range where data overlaps).\n",
         "\n",
         "---\n",
-        "Created for *Unsaturated zone water storage regulates recharge to groundwater and subsequent runoff response in seasonally dry California basins*."
+        "Created for *Patterns of Intra-Seasonal Groundwater Recharge Inferred from Streamflow and Explained by Vadose Zone Storage Deficits*."
       ],
       "metadata": {
         "id": "QXEQSx_dZoL8"
@@ -65,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Yte3rRNoXmmm"
       },
@@ -110,7 +109,7 @@
         "id": "Hz8gFYKZYPTB",
         "outputId": "f8434793-9c23-4b8a-e04c-04f084ba1b27"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +168,7 @@
       "metadata": {
         "id": "MqLvZh7S92EY"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +221,7 @@
         "id": "uqTx4XPFYYZe",
         "outputId": "33379196-f201-4308-e071-8a221ebbc78f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +252,7 @@
       "metadata": {
         "id": "CKSXEQikYYtP"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +290,7 @@
       "metadata": {
         "id": "XjS4HrSoYZB7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +315,7 @@
       "metadata": {
         "id": "5Ee4KRXozE80"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -501,7 +500,7 @@
       "metadata": {
         "id": "6WOj7mjqYZcA"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +538,7 @@
         "id": "yvIHJvk1YZ0J",
         "outputId": "7229821e-2b5d-4ee1-f89c-30e300505197"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,7 +778,7 @@
       "metadata": {
         "id": "HrReNgpSV2AM"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +844,7 @@
         "id": "fHQV6rsaKha9",
         "outputId": "8768d914-3a4e-413a-af91-9df8efea29f0"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
