Updated in response to co-author edits.

--- a/et_product_comparison.ipynb
+++ b/et_product_comparison.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRsTay3/g0VRXA/LQwvWHq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +32,7 @@
         "\n",
         "---\n",
         "\n",
-        "Created for *Unsaturated zone water storage regulates recharge to groundwater and subsequent runoff response in seasonally dry California basins*."
+        "Created for *Patterns of Intra-Seasonal Groundwater Recharge Inferred from Streamflow and Explained by Vadose Zone Storage Deficits*."
       ],
       "metadata": {
         "id": "CaGiIve9NQHY"
@@ -58,7 +57,7 @@
       "metadata": {
         "id": "Qy_ZRRgq9sO4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +80,7 @@
       "metadata": {
         "id": "kxSSXknDqC4_"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +105,7 @@
         "id": "powpdTXNFY9j",
         "outputId": "f5e521cd-b03b-4e37-cbd0-d334eabea8b5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +134,7 @@
       "metadata": {
         "id": "2T19h7ktOTGP"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +157,7 @@
       "metadata": {
         "id": "fwgjbJ-VOOkA"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +257,7 @@
       "metadata": {
         "id": "anTwRYS3OLdh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +282,7 @@
       "metadata": {
         "id": "Q_BEShBDNxQP"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,7 +357,7 @@
         },
         "outputId": "14a28f02-21ce-46a7-bf24-7273df16a5cd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +419,7 @@
       "metadata": {
         "id": "QwltcL-HYAjT"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,7 +460,7 @@
       "metadata": {
         "id": "ln-Ens8uq7M0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,7 +494,7 @@
         "id": "N4RJTXgPtFWN",
         "outputId": "d962b929-89f0-4fb2-b129-d31bd619d37e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -566,7 +565,7 @@
         "id": "oQYIoDQvpB1J",
         "outputId": "d7a58ae9-9a50-4b4c-ccc8-df764776a17c"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
